[project]
name = "chatbot-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.78.0",
    "pyqt6>=6.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyinstaller>=6.13.0",
    "ruff>=0.11.9",
]
